fix overflow

--- a/src/styles/Intro.scss
+++ b/src/styles/Intro.scss
@@ -2,8 +2,9 @@
   background-color: rgba(0, 0, 0, 0.5);
   padding: 2rem;
   width: 75%;
-  height: 80%;
+  height: 85%;
   color: white;
+  overflow: hidden;
   #intro-video {
     width: 100%;
     height: auto;
